[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "stress_test"
path = "src/bin/stress_test.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
